--- a/src/app/privado/galeria/galeria.component.html
+++ b/src/app/privado/galeria/galeria.component.html
@@ -28,9 +28,10 @@
       <div class="card">
         <div class="card-body">
           <!-- TODO: AGREGAR SI NO HAY FOTOS -->
+          <p *ngIf="!loadingList && images.length == 0" class="text-center">No existen imagenes para mostrar</p>
           <div class="mansory">
             <div class="item" *ngFor="let image of images">
-              <img [src]="'/files/gallery/' + image.archivo" />
+              <img [src]="'/files/' + image.archivo" />
               <div class="toolbar">
                 <div>
                   <!-- <Button class="btn btn-outline-primary rounded-circle mx-1">
