--- a/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
+++ b/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
@@ -99,7 +99,7 @@
           ></app-image-selector>
           <div *ngIf="!isChoosing" class="mansory">
             <div class="item" *ngFor="let image of habitacionImages">
-              <img [src]="'/files/gallery/' + image.archivo" />
+              <img [src]="'/files/' + image.archivo" />
               <div class="toolbar">
                 <div>
                   <Button
