Image selector cuando no hay registros

--- a/src/app/privado/components/galeria/image-selector/image-selector.component.html
+++ b/src/app/privado/components/galeria/image-selector/image-selector.component.html
@@ -7,6 +7,9 @@
     </button>
   </div>
 </div>
+<div class="row mb-1">
+  <div class="col-12"><p class="text-center">No hay imágenes que puedas seleccionar</p></div>
+</div>
 <div class="mansory">
   <div class="item" *ngFor="let image of _images">
     <img [src]="'/files/' + image.archivo" />
