--- a/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
+++ b/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
@@ -121,7 +121,7 @@
               type="button"
               class="btn btn-primary add pull-right"
               [disabled]="isChoosing"
-              (click)="isChoosing = true"
+              (click)="showImageSelector()"
             >
               <i class="fa fa-plus" aria-hidden="true"></i>
               Foto
@@ -135,7 +135,7 @@
             </p>
             <app-image-selector
               *ngIf="isChoosing"
-              [_images]="images"
+              [_images]="imagesFilter"
               (_cancel)="isChoosing = false"
               (_select)="addImage($event)"
             ></app-image-selector>
