--- a/src/app/privado/habitacion/habitacion.component.html
+++ b/src/app/privado/habitacion/habitacion.component.html
@@ -48,13 +48,15 @@
             <tbody>
               <tr *ngFor="let room of (rooms | filtrar: 'noHabitacion,habitacion':filtro)">
                 <td width="25%">{{ room.noHabitacion }}</td>
-                <td width="60%">{{ room.habitacion }}</td>
+                <td width="60%">
+                  <a [routerLink]="[room.idHabitacion]"
+                    >{{ room.habitacion }}
+                    <i class="fas fa-external-link-alt"></i>
+                  </a>
+                </td>
                 <!-- <td width="25%">{{room.tarifa | currency:'USD':true}}</td> -->
                 <td width="15%" class="text-center">
                   <div class="btn-group grid-btn" role="group">
-                    <a [routerLink]="[room.idHabitacion]" class="btn btn-link text-primary">
-                      <i class="fas fa-info-circle"></i>
-                    </a>
                     <button
                       type="button"
                       (click)="setModi(room)"
