--- a/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
+++ b/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
@@ -28,7 +28,7 @@
                   #publicadoWeb="ngModel"
                   (change)="guardarPublicadoWeb()"
                 />
-                <label class="custom-control-label" for="publicadoWeb">Publicado en pagina web</label>
+                <label class="custom-control-label" for="publicadoWeb">Publicado en página web</label>
               </div>
             </div>
           </div>
