--- a/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
+++ b/src/app/privado/habitacion-detalle/habitacion-detalle.component.html
@@ -157,7 +157,7 @@
             ></app-image-selector>
             <div *ngIf="!isChoosing" class="mansory">
               <div class="item" *ngFor="let image of habitacionImages">
-                <img [src]="'/files/' + image.archivo" />
+                <img [src]="image.archivo" />
                 <div class="toolbar">
                   <div class="mt-auto">
                     <Button
